<resources>
    <string name="app_name">JA2 Stracciatella</string>
    <string name="title_activity_launcher">Jagged Alliance 2 Stracciatella</string>
    <string name="floating_action_button_start_text">Start the game</string>
    <string name="tab_text_data">Data</string>
    <string name="tab_text_settings">Settings</string>
    <string name="tab_text_logs">Logs</string>
    <string name="select_directory_button_label">Choose</string>
    <string name="game_dir_title_text">Original Jagged Alliance 2 Game Directory</string>
    <string name="game_dir_info_text">
        Jagged Alliance 2 Stracciatella to run needs a copy the original game files.
        Copy them to your Android device and select the directory here.
        This directory should contain e.g. the .exe files and a Data directory.
    </string>
    <string name="game_dir_empty_text">No directory chosen yet</string>
    <string name="save_game_dir_title_text">Save Game Directory</string>
    <string name="save_game_dir_info_text">
        Change the save game directory. This allows e.g. synchronizing your saves with the cloud.
    </string>
    <string name="save_game_dir_empty_text">Use default directory</string>
    <string name="game_version_title_text">Original Jagged Alliance 2 Game Version</string>
    <string name="game_version_info_text">
        Select the game version of you original Jagged Alliance 2 game files.
    </string>
    <string name="game_version_empty_text">No version chosen yet</string>
    <string name="scaling_quality_info_title_text">Scaling Mode</string>
    <string name="scaling_quality_info_text">Choose a scaling mode to stretch the game video to fit the screen. Linear and Near-Perfect modes stretch the video to match any window sizes, but the image may look blurred. Pixel-Perfect can only scale up by integer (1x, 2x and so on) but gives sharp images.</string>
    <string name="resolution_info_title_text">Internal Resolution</string>
    <string name="resolution_info_text">Specify the resolution for tactical screen rendering. Texts and sprites become very small at higher internal resolutions. Note that menus and the strategic map screen are always rendered at 640x480. The launcher can try to detect the best resolution. The result will depend on the selected scaling mode.</string>
    <string name="resolution_auto_button">Detect</string>
    <string name="logs_description_text">The logs of your latest run of the game are shown below. In case of any issues, you can check the logs for errors. If you create a bug report, please include the logs.</string>
    <string name="logs_copy_to_clipboard_button">Copy all logs to clipboard</string>
    <string name="logs_copied_to_clipboard_name">JA2 Stracciatella logs</string>
    <string name="logs_copied_to_clipboard_toast">Copied logs to clipboard</string>
    <string name="debug_mode_info_title_text">Debug Mode</string>
    <string name="debug_mode_info_text">In case you run into issues, you can enable debug mode. This will result in more logs being written in order to be able to debug issues.</string>
    <string name="debug_mode_label">Enable Debug Mode</string>
    <string name="continue_action">Continue</string>
    <string name="common_mistakes_no_game_dir_selected_title">No game directory selected</string>
    <string name="common_mistakes_no_game_dir_selected_description">You have not selected a game directory yet. Please set a game directory containing an unmodified Jagged Alliance 2 installation.</string>
    <string name="common_mistakes_no_data_dir_found_title">Incorrect game directory detected</string>
    <string name="common_mistakes_no_data_dir_found_description">The Data directory was not found within game directory. This means the chosen directory does not contain a Jagged Alliance 2 installation.</string>
    <string name="common_mistakes_one_dot_thirteen_detected_title">Modified game directory detected</string>
    <string name="common_mistakes_one_dot_thirteen_detected_description">We detected that the game directory contains the 1.13 patch. JA2 Stracciatella will not work properly with the modified files. Please use a clean installation of Jagged Alliance 2.</string>
</resources>
